# strainMiner

./: .gitignore  CMakeLists.txt  README.md  __init__.py  create_new_contigs.cpp  mypy.ini  output.txt  remarks.md  ruff.toml  strainminer.py
config/: condaenv_310-dev.yml  requirements-linters.txt
strainminer_logging/: __init__.py  binmatrix.py  contig.py  loci_window.py  postprocess.py
strainminer_logging/strips/: __init__.py  bipart.py  hca.py  qbc.py
